--- a/HTML/css/common.css
+++ b/HTML/css/common.css
@@ -1,12 +1,16 @@
 ﻿/*公共样式*/
-* {/*通配符选择器*/
+* { /*通配符选择器*/
     padding: 0;
     margin: 0;
-}
-html{/*标记*/
-}
-table{
-    border-collapse:collapse;
+    box-sizing: border-box;
+    -moz-box-sizing: border-box; /* Firefox */
+    -webkit-box-sizing: border-box; /* Safari */ 
 }
 
+html { /*标记*/
+        
+}
 
+table {
+    border-collapse: collapse;
+}
