--- a/HTML/css/common.css
+++ b/HTML/css/common.css
@@ -4,13 +4,19 @@
     margin: 0;
     box-sizing: border-box;
     -moz-box-sizing: border-box; /* Firefox */
-    -webkit-box-sizing: border-box; /* Safari */ 
+    -webkit-box-sizing: border-box; /* Safari */
 }
 
 html { /*标记*/
-        
 }
 
 table {
     border-collapse: collapse;
+}
+
+.container {
+    width: 60%;
+    margin: 0 auto;
+    height: 1000px;
+    background-color:orangered;
 }
